--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ logging.level.org.springframework.web.servlet.DispatcherServlet=INFO
 #cache
 spring.cache.type=caffeine
 spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=10m
+#scraper
+scraper.api.key=d6d4bf0c0685e24e605e2362ee1c9f55
+scraper.url=https://api.scraperapi.com
+#forex
+forex.url=https://www.forexfactory.com
