--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -14,7 +14,7 @@ services:
   java-app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: DockerfileLocal
     working_dir: /app
 
     environment:
@@ -24,7 +24,7 @@ services:
     command: ["java", "-XX:+UseContainerSupport", "-Djava.security.egd=file:/dev/./urandom", "-jar", "app.jar"]
 
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8082/find-alert/actuator || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8081/find-alert/actuator || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -35,7 +35,7 @@ services:
 
     # Local không cần Traefik → Nếu bạn cần, mình thêm lại sau
     ports:
-      - "8082:8082"
+      - "8081:8081"
 
 # =====================================================
 # 🔗 Networks
